1. fix margin-top attribute of main content on mobile device

--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -43,7 +43,7 @@ main.site-main {
     .input-w-sm-full {
         width: 100%;
     }
-    main {
+    main.site-main {
         margin-top: 16px;
     }
 }
